--- a/assets/footer-section.css
+++ b/assets/footer-section.css
@@ -53,9 +53,47 @@
     margin-top: 0;
 }
 
-.footer-instagram-logo-image,
 .footer-tiktok-logo-image,
 .footer-xiaohongshu-logo-image {
     width: 25px;
     margin-right: 60px;
+}
+
+.footer-instagram-logo-image {
+    width: 32px;
+    margin-right: 60px;
+}
+
+@media only screen and (max-width: 990px) {
+    .footer-tner-logo-image {
+        width: 50px;
+    }
+
+    .footer-header-container1 p {
+        font-size: 3px;
+        width: 50px;
+    }
+
+    .footer-header-container2 {
+        font-size: 5px;
+        margin-top: 5px;
+    }
+
+    .footer-header-container3 {
+        font-size: 5px;
+        margin-top: 5px;
+    }
+
+    .footer-tiktok-logo-image,
+    .footer-xiaohongshu-logo-image {
+        width: 8px;
+        margin-left: 15px;
+        margin-right: 10px;
+    }
+
+    .footer-instagram-logo-image {
+        width: 12px;
+        margin-left: 15px;
+        margin-right: 10px;
+    }
 }
