--- a/assets/section-third-rentnow.css
+++ b/assets/section-third-rentnow.css
@@ -175,3 +175,55 @@
 
     margin-top: 20px;
 }
+
+@media only screen and (max-width: 990px) {
+    .rentnow-third-section h1 {
+        font-size: 15px;
+        letter-spacing: -1.5px;
+    }
+
+    .rentnow-third-section {
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
+    .rentnow-third-section p {
+        font-size: 12px;
+        letter-spacing: -1.5px;
+    }
+
+    .rentnow-subheader-container7 svg,
+    .rentnow-subheader-container8 svg {
+        width: 20px;
+        height: 20px;
+    }
+
+    .rentnow-selfcollection-image,
+    .rentnow-delivery-image {
+        width: 25px;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    #rentNowYearError,
+    #rentNowMonthError,
+    #rentNowDateError {
+        font-size: 8px;
+        letter-spacing: -0.5px;
+        margin-top: 3px;
+    }
+
+    .rentnow-confirm-button {
+        letter-spacing: -1px;
+        border-radius: 5px;
+        border: 1px solid rgba(13, 38, 16, .2);
+        padding: 5px 10px;
+        margin-top: 5px;
+        font-size: 15px;
+    }
+
+    #rent-now-whatsapp-text {
+        font-size: 10px;
+        letter-spacing: -0.5px;
+    }
+}
