--- a/sections/footer-section.liquid
+++ b/sections/footer-section.liquid
@@ -9,7 +9,7 @@
 <div class="footer-section">
 
   <div class="footer-header-container1">
-    <img class="footer-tner-logo-image" src="{{ 'footer-tner-logo.svg' | asset_url }}"/>
+    <img class="footer-tner-logo-image" src="{{ 'footer-tner.svg' | asset_url }}"/>
     <p>{{settings.footer_UEN}}</p>
   </div>
 
@@ -25,13 +25,13 @@
 
   <div class="footer-header-container4">
     <a href="https://www.instagram.com/tner.sg/">
-      <img class="footer-instagram-logo-image" src="{{ 'footer-instagram-logo.svg' | asset_url }}"/>
+      <img class="footer-instagram-logo-image" src="{{ 'footer-instagram.svg' | asset_url }}"/>
     </a>
     <a href="https://www.tiktok.com/@tner.sg?lang=en">
-      <img class="footer-tiktok-logo-image" src="{{ 'footer-tiktok-logo.svg' | asset_url }}"/>
+      <img class="footer-tiktok-logo-image" src="{{ 'footer-tiktok.svg' | asset_url }}"/>
     </a>
     <a>
-      <img class="footer-xiaohongshu-logo-image" src="{{ 'footer-xiaohongshu-logo.svg' | asset_url }}"/>
+      <img class="footer-xiaohongshu-logo-image" src="{{ 'footer-xiaohongshu.svg' | asset_url }}"/>
     </a>
   </div>
 
