--- a/sections/homepage-second-section.liquid
+++ b/sections/homepage-second-section.liquid
@@ -10,7 +10,7 @@
 
     <div class="homePageAllPeople">
 
-        <img class="homePageOpenQuote" src="{{ 'openQuotation.svg' | asset_url }}"/>
+        <img class="homePageOpenQuote" src="{{ 'openQuotationMark.svg' | asset_url }}"/>
 
         <div class="homePagePeople1">
             <img class="homePage-luggage1-image" src="{{ 'homepage-luggage1.svg' | asset_url }}"/>
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <img class="homePageCloseQuote" src="{{ 'closeQuotation.svg' | asset_url }}"/>
+        <img class="homePageCloseQuote" src="{{ 'closeQuotationMark.svg' | asset_url }}"/>
 
     </div>
 </div>
