--- a/sections/howitworkspage-first-section.liquid
+++ b/sections/howitworkspage-first-section.liquid
@@ -30,7 +30,7 @@
                 </div>
             </div>
 
-            <p>{{settings.howitworks_cycle_subheader7}}</p>
+            <p class="howitworks-cycle-subheader7">{{settings.howitworks_cycle_subheader7}}</p>
             <span class="howitwork-3rd-text">{{settings.howitworks_cycle_subheader3}}</span>
 
             <div class="howitworks-subheader-container5">
@@ -38,7 +38,7 @@
                 <div class="howitworks-subheader-container2">
                     <img class= "howitworks-arrow-image" src="{{ 'howitworks-arrow.svg' | asset_url }}" />
                     <h4>{{settings.howitworks_cycle_title2}}</h4>
-                    <p>{{settings.howitworks_cycle_subheader6}}</p>
+                    <p class="howitworks-cycle-subheader6">{{settings.howitworks_cycle_subheader6}}</p>
                 </div>
 
                 <div class="howitworks-subheader-container3">
